data/all_generated_tests/raw_wast_tests/block_UnreachableCodeExecution_2015.wast
;; 6. **Test Description**: Implement a block that sets up the operand stack for a particular type, then branches forward to skip an `unreachable` instruction and verify the state of the operand stack upon continuation.

(assert_invalid
  (module (func $test_operand_stack_forward_branch
    (block (result i32)
      (i32.const 42) 
      (br 0)
      (unreachable)
    )
    (i32.add) 
  ))
  "type mismatch"
)